# intervals_ai

./: .gitignore  README.md  pyproject.toml
intervals_ai/: demo_intervals.py  main.py
intervals_ai/dataset/: dataset.py  preprocessor.py
intervals_ai/experiments/run_20241207_210709/stats/: evaluation_results.json  metrics_summary.txt  run_config.json  training_history.json  training_summary.txt
intervals_ai/generation/: config.py  intervals.py
intervals_ai/models/: cnn.py  evaluation.py  trainer.py
intervals_ai/utils/: audio.py  visualization.py
