[tool.poetry]
name = "intervals-ai"
version = "0.1.0"
description = "Dataset generator for musical intervals"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "intervals_ai" }]

[tool.poetry.dependencies]
python = ">=3.10"
librosa = "^0.10.1"
numpy = "^1.24.0"
scipy = "^1.11.0"
pandas = "^2.1.0"
torch = { version = "^2.0.0", extras = ["cpu"] }
scikit-learn = "^1.3.0"
skorch = "^0.13.0"
sounddevice = "^0.4.6"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
soundfile = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"